﻿This file includes only a short list of the changes between Media Player Classic - BE's versions.

1.5.3 (beta)
=============================

Updated libraries:
	ffmpeg git-n4.2-dev-573-g1dcb5b7dca;
	libaom git-v1.0.0-1116-g00c80e6b5;
	libflac git-1.3.2-98-g421961f0;
	Little-CMS git-lcms2.9-28-g239fc87;
	MediaInfo git-v18.12-4-g780f8428;
	ZenLib git-v0.4.37-29-g42a4dcf;

1.5.2
==============================
Build in Visual Studio 2015 is no longer supported.

VTSReader
Fixed crash on some DVD-Audio with empty Title.

UDP / HTTP Reader
Added the ability to connect to streams with "Content-Type: None", this is found on some IPTV broadcasts.

DTSAC3Source
Added support for files with AC3 core + EAC3 dependent streams.

Splitters
Improved work with bad ID3m2 tags, added support for reading Extended header.
Corrected extradata filling for H.264 and HEVC.
Improved recovery of access to the playing file (after reconnecting the flash drive, network drive, etc.).
Improved compatibility with StreamBuffRe.
Added MPC DVR Splitter to work with recordings of some Chinese DVR / IP cameras ('HXVS').
Improved support for chapters and images in ID3v2 tags.
Optimized data reading.
Maximum buffer size increased to 15 seconds. This should solve the problem with DVD-drives, in which the rotation speed increases with a large delay.

MPEGSplitter
Improved support for DVD-Audio.
Improved support for online streams.
Fixed playback of some MPEG-TS streams.
Fixed time search of some MPEG-PS streams.
Improved reading PSI (Program-specific information).
Added support for displaying multiple languages in track titles (this is found in subtitles).
Improved support for DTS-HD.
Added support for files with AC3 core + EAC3 dependent streams.
Fixed crash when opening "incomplete" Blu-ray structure.
Added support for MPEG-4 ASP.
Corrected settings window for large scales.
The opening time of some files with AVC and HEVC streams has been reduced.

MP4Splitter
Improved support for Vorbis streams.