@@ -9,6 +9,7 @@ Updated libraries:
 	libflac git-1.3.2-98-g421961f0;
 	Little-CMS git-lcms2.9-28-g239fc87;
 	MediaInfo git-v18.12-4-g780f8428;
+	rapidjson git-v1.1.0-461-gbfdcf491;
 	ZenLib git-v0.4.37-29-g42a4dcf;
 
 1.5.2
